java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testCastOrMethodInvocation58494h-hints.pass
Cast ...o to Integer
Cast ...o to Float
Create method doStuff(java.lang.Object) in org.netbeans.test.java.hints.CastOrMethodInvocation58494hUsee
